--- a/gb/25/11/30/n14645821.md
+++ b/gb/25/11/30/n14645821.md
@@ -7,38 +7,44 @@
 <hr>
 	<p>【大纪元2025年11月30日讯】（大纪元记者钟又淳报导）11月29日晚，周润发为亚洲乐坛年度盛事“2025 Mnet亚洲音乐颁奖礼”（MAMA）担任压轴嘉宾，负责颁发年度最佳艺人奖（ARTIST OF THE YEAR）。一身黑色礼服的他，满头白发，发言时一度哽咽。之后全场熄灯，为香港大埔宏福苑火灾的罹难者默哀。</p>
 <p>时隔7年，韩国一年一度的“2025 MAMA Awards”颁奖典礼今年回到香港举办。周润发本来因大埔宏福苑火灾，一度与杨紫琼取消颁奖邀约。但他改变主意，29日晚亲自到场，压轴颁发最大奖项“年度最佳艺人”，也带领全场为大火中的百余名罹难者祈福。</p>
-<p>顶着一头白发的周润发，身着黑色西装，别上黑色丝带。他用中英粤三种语言说：“在颁奖前，我想提出一个小小的请求。为了向香港宏福苑居民传达真挚的应援之意，请大家全体起立。”期间他一度哽咽，强忍悲痛表示：“向失去挚爱家人、失去朋友的所有人士，献上我最真诚的慰问。”之后，全场熄灯，默哀1分钟。</p>
+<p>顶着一头白发的周润发，身着黑色西装，别上黑色丝带，走上台时他神情肃穆，用中英粤三种语言说：“在颁奖前，我有一个小小的要求。希望大家起立，为大埔宏福苑的送上衷心的祝福。”期间，他一度哽咽，强忍悲痛，请求全场为香港火灾遇难者默哀。之后全场熄灯，默哀1分钟。<ahref="https://x.com/yingtan04410735/status/1995035207758746030?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1995035207758746030%7Ctwgr%5E96b4674a34f501357fdb9fcc293204ad8389a96c%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Fwww.ntdtv.com%2Fb5%2F2025%2F11%2F30%2Fa104042801.md#1" target="_blank" rel="noopener">点看视频</a>）</p>
 <p>当灯光亮起后，周润发重新整理情绪。2015年曾颁发过同一奖项的他笑说：“我等MAMA邀请我，等这个机会等了7年，等到头发都白了！”成功转换现场气氛。</p>
 <p>周润发还打趣用韩语催促“快点快点，没时间了”。最后他开心宣布得奖人是G-Dragon（权志龙），不仅开心送上拥抱，还俏皮地和权志龙牵手跳了一段舞。两代巨星的互动，将当晚的气氛推向高潮。</p>
 <p>责任编辑：杨明</p>
+<div class="related-article" style="margin-top: 1.5em; font-weight: bold;">推荐阅读：</div>
+<ul class="related-posts" style="padding: 0 0 1em 25px; margin-left: 10px; color: #039; list-style: outside;">
+<li style="padding: 0.5rem 20px 0 0;"><a style="color: #039;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645906.md#1" rel="noopener">香港世纪大火 问责联署发起人遭拘捕</a></li>
+<li style="padding: 0.5rem 20px 0 0;"><a style="color: #039;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14636110.md#1" rel="noopener">周润发张学友拒上综艺秀 刘嘉玲曝原因</a></li>
+<li style="padding: 0.5rem 20px 0 0;"><a style="color: #039;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548151.md#1" rel="noopener">获奖无数为何不想拿这奖 周润发设80岁前目标</a></li>
+<li style="padding: 0.5rem 20px 0 0;"><a style="color: #039;" href=><a href="https://github.com/1992513/djy/blob/master/gb/25/7/26/n14561285.md#1" rel="noopener">跑步时在车旁更衣被偷拍 周润发友善反应获赞</a></li>
+</ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/7/n9814027.md#1" target="_blank">十月革命百年 美重磅评论剖析共产主义罪恶</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/28/n11903759.md#1" target="_blank">朱镕基发言3分钟被打成右派20年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/19/n10920991.md#1" target="_blank">十八年宿疾消散 台湾女子感恩法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/1/n14472598.md#1">【品读唐诗】登高秋望 吟成古今第一七言律</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642446.md#1">【未解之谜】中共官员死而复活 带回冥界惊人信息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/10/n14632971.md#1">他动一念 数十年修行前功尽弃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642937.md#1">祖辈积德福荫子孙 一个善有善报的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641242.md#1">穿越时空隧道 尘世彼岸的奥秘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645734.md#1">【重播】香港各界人士献花悼念大火罹难者</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645712.md#1">【思想领袖】政治学家莫瑞回归信仰的旅程</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645419.md#1">【时事金扫描】美国首都枪击案 引发反移民风暴</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644412.md#1">中国渔船接连沉没 暴露的问题触目惊心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644967.md#1">香港大火128人死 官方速排除棚网问题惹议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644562.md#1">铜精矿危机冲击 中国冶炼厂年度费用谈判承压</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644744.md#1">霍建华被爆接陆剧自降片酬 少收千万原因曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644612.md#1">陈晓新剧《大生意人》爆红 微博背景图引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643853.md#1">张学友近照曝光 苍老模样令网友震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643931.md#1">张靓颖自曝健康状况 宣布跨年演唱会取消加场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645283.md#1">甄子丹妻称大陆货酿香港大火 遭网暴后急删文</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644959.md#1">研究：有“蝙蝠侠”在场 人们比较会行善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644839.md#1">为什么飞行员怕听到塔台说这句话？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645400.md#1">玻璃罐打不开？ 英国教授教你用这招迅速搞定</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644212.md#1">黑色星期五 商家有何心理策略让你“血拼”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644040.md#1">成年人难觅知己？ 专家教你用3招增进友谊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652050.md#1">【直播】听证会：中共在拉丁美洲的组织犯罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/11/30/n14645821.htm">周润发满头白发登MAMA 率全场哀悼火灾罹难者</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645821.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
